objects/Jira_Case__c.object
<CustomObject>
    <fields>
        <fullName>Bug_Environment__c</fullName>
        <label>Bug Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>PROD</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>DEV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Stage__c</fullName>
        <defaultValue>(&quot;Development&quot;)</defaultValue>
        <label>Case Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                    <default>true</default>
                    <label>Development</label>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Jira Cases</relationshipLabel>
        <relationshipName>Jira_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Components__c</fullName>
        <defaultValue>(&quot;Sales Enablement (Disrupters)&quot;)</defaultValue>
        <label>Components</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EpicLink__c</fullName>
        <defaultValue>(&quot;NAIT-120447&quot;)</defaultValue>
        <label>Epic Link</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Found_In__c</fullName>
        <label>Found In</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_description__c</fullName>
        <label>Impact description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IssueType_to_Classification__c</fullName>
        <formula>CASE(Issue_Type__c  , &apos;Task&apos;, &apos;Task&apos;, &apos;Story&apos;, &apos;Enhancement&apos;,&apos;Bug&apos;,&apos;Issue&apos;,&apos;Enhancement&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IssueType to Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_type_code__c</fullName>
        <formula>CASE( Case__r.IT_Classification__c , &apos;Enhancement&apos;, &apos;7&apos;, &apos;Task&apos;, &apos;3&apos;,&apos;Question&apos;,&apos;3&apos;,&apos;Issue&apos;,&apos;1&apos;,&apos;1&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue_type_code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira2CasePriority__c</fullName>
        <formula>CASE(priority__c, &apos;Critical&apos;, &apos;1-Critical&apos;, &apos;Major&apos;, &apos;2-High&apos;, &apos;Minor&apos;, &apos;3-Medium&apos;, &apos;Trivial&apos;, &apos;4-Low&apos;, &apos;Blocker&apos;, &apos;2-High&apos;,&apos;3-Medium&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jira To Case Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JiraClarityProject__c</fullName>
        <formula>IF( linked_Jira_Case__r.clarityProject__c=null , CASE(Components__c , &apos;Sales Enablement (Disrupters)&apos;, &apos;Support - Customer Life Cycle - PR003295&apos;, &apos;Spartans&apos;, &apos;Support - Customer Life Cycle - PR003295&apos;,&apos;Support - Customer Life Cycle - PR003295&apos;), linked_Jira_Case__r.clarityProject__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JiraClarityProject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JiraEpickLink__c</fullName>
        <formula>IF( ISNULL(EpicLink__c) , CASE(Components__c , &apos;Sales Enablement (Disrupters)&apos;, &apos;NAIT-120447&apos;, &apos;Spartans&apos;, &apos;NAIT-120447&apos;,&apos;NAIT-120447&apos;),EpicLink__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JiraEpickLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_ID__c</fullName>
        <externalId>true</externalId>
        <label>Jira ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Link__c</fullName>
        <label>Jira Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Jira_Sync_Status__c</fullName>
        <label>Jira Sync Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_UAT_Backlog_id__c</fullName>
        <formula>IF(Components__c==&apos;Sales Enablement (Disrupters)&apos;, IF( Issue_type_code__c ==&apos;1&apos;, &apos;6444&apos;, &apos;6698&apos;), IF(Components__c==&apos;Spartans&apos;, IF( Issue_type_code__c ==&apos;1&apos;, &apos;7149&apos;, &apos;7149&apos;), &apos;6698&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jira UAT Backlog id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_purpose__c</fullName>
        <label>Jira Purpose</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_source_status__c</fullName>
        <label>Jira source status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labels__c</fullName>
        <label>Labels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>project1</fullName>
                </value>
                <value>
                    <fullName>project2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Linked_Jira_key__c</fullName>
        <label>Linked Jira key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint_Name__c</fullName>
        <label>Sprint Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assigne__c</fullName>
        <label>Assigne</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>business_needed_by__c</fullName>
        <label>business needed by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>case_owner__c</fullName>
        <label>case owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clarityProject__c</fullName>
        <label>clarityProject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>componentid__c</fullName>
        <formula>CASE(Components__c , &apos;Sales Enablement (Disrupters)&apos;, &apos;36705&apos;, &apos;Spartans&apos;, &apos;37151&apos;,&apos;36705&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>componentid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>linked_Jira_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jira Case</label>
        <referenceTo>Jira_Case__c</referenceTo>
        <relationshipLabel>Jira Cases</relationshipLabel>
        <relationshipName>Jira_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>priority__c</fullName>
        <label>priority</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reporterkey__c</fullName>
        <defaultValue>(&quot;557058:7b7c796d-a971-4a7d-a842-41cf2e86ba6c&quot;)</defaultValue>
        <label>reporter key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>summary__c</fullName>
        <label>summary</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>system_update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>system Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Jira Case</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Jira Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jira Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>